# finbot

./: .gitignore  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yaml
src/: __main__.py
src/firefly/: __init__.py  client.py
